# TaskManager

./: Dockerfile  README.md  backup.json  pyproject.toml
.github/workflows/: python-app.yml
locale/en/LC_MESSAGES/: django.mo  django.po
static/: app.css  app.js
staticfiles/: app.js  staticfiles.json
task_manager/: settings.py  urls.py  views.py
task_manager/dashboard/: views.py
task_manager/labels/: views.py
task_manager/priorities/: admin.py  apps.py  models.py
task_manager/priorities/migrations/: 0001_initial.py  0002_alter_priority_order.py  0003_alter_priority_order.py
task_manager/projects/: models.py  urls.py  views.py
task_manager/projects/migrations/: 0001_initial.py
task_manager/statuses/: admin.py  models.py  views.py
task_manager/statuses/migrations/: 0002_status_order.py  0003_alter_status_order.py
task_manager/tasks/: admin.py  filters.py  forms.py  models.py  tests.py  views.py
task_manager/tasks/migrations/: 0002_task_project.py  0003_task_priority.py  0004_task_is_closed.py
task_manager/users/: admin.py  views.py
templates/labels/: labels.html
templates/projects/: project_create.html  project_delete.html  project_update.html  projects.html
templates/statuses/: statuses.html
templates/task_manager/: dashboard.html  layout.html  settings.html
templates/tasks/: task_create.html  task_detail.html  task_update.html  tasks.html
templates/users/: users.html
