[tool.poetry]
name = "taskmanager"
version = "0.1.0"
description = ""
authors = ["Nikolai <nicolas.gordienko@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.4"
django-bootstrap4 = "^23.2"
python-dotenv = "^1.0.0"
psycopg2-binary = "^2.9.7"
dj-database-url = "^2.1.0"
django-filter = "^23.2"
whitenoise = "^6.5.0"
flake8 = "^6.1.0"
django-test = "^0.4030"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
